# bevy_gpu_compute

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  bevy_gpu_compute_core.code-workspace  flow_diagram.graphml  pre-commit-tasks.bash  understanding_wgpu.graphml
bevy_gpu_compute/: .aidigestignore  Cargo.toml  README.md  flow_diagram_with_wgsl_converter.graphml  gpu-compute-bevy_ai-digest.md
bevy_gpu_compute/examples/collision_detection/: main.rs  tt.ts  visuals.rs
bevy_gpu_compute/examples/collision_detection_barebones/: main.rs  visuals.rs
bevy_gpu_compute/examples/collision_detection_demonstration/: main.rs
bevy_gpu_compute/src/: lib.rs  plugin.rs  prelude.rs  resource.rs  run_ids.rs  spawn_fallback_camera.rs  system_sets.rs
bevy_gpu_compute/src/system_params/: mod.rs  task_creator.rs  task_deleter.rs  task_reader.rs  task_runner.rs
bevy_gpu_compute/src/task/: events.rs  lib.rs  mod.rs  setup_tasks.rs  task.rs  task_commands.rs  verify_enough_memory.rs  wgsl_code.rs
bevy_gpu_compute/src/task/buffers/: components.rs  create_config_input_buffers.rs  create_input_buffers.rs  create_output_buffers.rs  mod.rs
bevy_gpu_compute/src/task/compute_pipeline/: cache.rs  mod.rs  pipeline_cache.rs  update_on_pipeline_const_change.rs
bevy_gpu_compute/src/task/dispatch/: create_bind_group.rs  dispatch_to_gpu.rs
bevy_gpu_compute/src/task/inputs/: input_config_types_spec.rs  input_data.rs  input_vector_metadata_spec.rs  mod.rs  type_erased_input_data.rs
bevy_gpu_compute/src/task/outputs/: mod.rs  read_gpu_output_counts.rs  read_gpu_task_outputs.rs
bevy_gpu_compute/src/task/task_components/: buffers.rs  data.rs  input_lengths.rs  mod.rs  task.rs  task_max_output_bytes.rs
bevy_gpu_compute/src/task/task_specification/: gpu_workgroup_sizes.rs  gpu_workgroup_space.rs  immutable_spec.rs  input_array_lengths.rs  iteration_space.rs  max_output_vector_lengths.rs  mod.rs  mutable_spec.rs  task_specification.rs
bevy_gpu_compute_core/: Cargo.toml  README.md  shared_ai-digest.md
bevy_gpu_compute_core/src/: lib.rs
bevy_gpu_compute_core/src/rust/: config_input_data.rs  in_out_metadata.rs  iter_space_dimmensions.rs  library_import.rs  max_output_lengths.rs  mod.rs  type_erased_array_input_data.rs  type_erased_config_input_data.rs  type_erased_output_data.rs  type_safe_api_helpers.rs
bevy_gpu_compute_core/src/wgsl/: mod.rs  shader_custom_type_name.rs
bevy_gpu_compute_core/src/wgsl/shader_module/: complete_shader_module.rs  derived_portion.rs  mod.rs  user_defined_portion.rs
bevy_gpu_compute_core/src/wgsl/shader_sections/: code.rs  const_assignment.rs  custom_type.rs  function.rs  import.rs  input_array.rs  mod.rs  output_array.rs  wgpu_binding.rs  workgroup_declaration.rs
bevy_gpu_compute_core/src/wgsl/user_facing_api/: mod.rs
bevy_gpu_compute_macro/: Cargo.toml  README.md  flow_planning.graphml  rust_to_wgsl_ai-digest.md
bevy_gpu_compute_macro/src/: lib.rs  state.rs
bevy_gpu_compute_macro/src/pipeline/: allowed_types.rs  compilation_metadata.rs  compilation_unit.rs  compile_error.rs  lib.rs  mod.rs  state.rs
bevy_gpu_compute_macro/src/pipeline/module_parser/: constants.rs  divide_custom_types.rs  helper_functions.rs  lib.rs  main_function.rs  validate_no_global_id_assignments.rs
bevy_gpu_compute_macro/src/pipeline/phases/: compiler_phase.rs  mod.rs
bevy_gpu_compute_macro/src/pipeline/to_wgsl_syntax/: mod.rs  remove_pub_from_struct_def.rs  type.rs  wgsl_builtin_constructors.rs
bevy_gpu_compute_macro/src/pipeline/transform_wgsl_helper_methods/: erroneous_usage_finder.rs  helper_method.rs  matcher.rs  mod.rs  parse.rs  run.rs  test.rs  test_for_cpu.rs  to_expanded_format.rs
bevy_gpu_compute_macro/src/transformer/: mod.rs  remove_doc_comments.rs
bevy_gpu_compute_macro/src/transformer/custom_types/: custom_type.rs  custom_type_idents.rs  get_all_custom_types.rs
bevy_gpu_compute_macro/src/transformer/module_parser/: constants.rs  divide_custom_types.rs  helper_functions.rs  lib.rs  main_function.rs  mod.rs  module_parser.rs  use_statements.rs
bevy_gpu_compute_macro/src/transformer/output/: expanded_module.rs  mod.rs  per_component_expansion.rs  shader_module_object.rs  unaltered_module.rs
bevy_gpu_compute_macro/tests/: components.rs  tt.rs
bevy_gpu_compute_macro/tests/ui/: alias_to_helper_type.rs  alias_to_helper_type.stderr  bools_not_supported.rs  bools_not_supported.stderr  incorrect_vec_construction.rs  incorrect_vec_construction.stderr  incorrect_vec_constructor_in_macro.rs  incorrect_vec_constructor_in_macro.stderr  no_doc_comments.rs  no_doc_comments.stderr
gpu-compute-bevy/: Cargo.toml  flow_diagram.graphml  flow_diagram_with_wgsl_converter.graphml  understanding_wgpu.graphml
gpu-compute-bevy/examples/: collision_detection.rs
gpu-compute-bevy/examples/collision_detection/: example.wgsl  main.rs  tt.ts  visuals.rs
gpu-compute-bevy/src/: lib.rs  plugin.rs  ram_limit.rs  resource.rs  spawn_fallback_camera.rs  system_sets.rs  usage_example.rs
gpu-compute-bevy/src/task/: events.rs  setup_tasks.rs  task_commands.rs  verify_enough_memory.rs  wgsl_code.rs
rust_to_wgsl/: .aidigestignore  Cargo.toml  build.rs  together.md
rust_to_wgsl/examples/collision_shader/: main.rs  wgsl_in_rust_helpers.rs
rust_to_wgsl/src/: lib.rs  state.rs
rust_to_wgsl/src/third_crate/: wgsl_components.rs
rust_to_wgsl/src/transformer/: allowed_types.rs  convert_special_helper_functions.rs  mod.rs  module_parser.rs  remove_doc_comments.rs  tokenized_initializer_for_user_portion.rs  type_transformer.rs
rust_to_wgsl/tests/: components.rs
rust_to_wgsl/tests/ui/: alias_to_helper_type.rs  alias_to_helper_type.stderr  incorrect_vec_construction.rs  incorrect_vec_construction.stderr  incorrect_vec_constructor_in_macro.rs  incorrect_vec_constructor_in_macro.stderr
shared/: Cargo.toml
shared/src/: compose_wgsl_module.rs  custom_type_name.rs  lib.rs  misc_types.rs  wgsl_components.rs  wgsl_shader_module.rs  wgsl_shader_module_lib_portion.rs  wgsl_wgpu_binding.rs
shared/src/wgsl_in_rust_helpers/: matrices.rs  mod.rs  pod_f16.rs  vectors.rs
(+445 files in other folders)
