cargo-features = ["edition2024"]
[package]
name = "gpu_accelerated_collision_detection"
version = "0.1.0"
edition = "2024"

[alias]
test = "test -- --no-capture"

[dependencies]
approx = "0.5.1"
# regular
bevy = { version = "0.15"}

bytemuck = "1.20.0"
futures = "0.3.31"
pollster = "0.4.0"
rand = "0.8.5"
rayon = "1.10.0"
serde = "1.0.216"
serde_json = "1.0.133"
sysinfo = "0.33.0"
wgpu = "23.0.1"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release.package."*"]
opt-level = 3  

[toolchain]
channel = "nightly"
