cargo-features = ["edition2024"]
[package]
name = "gpu-accelerated-bevy"
version = "0.1.0"
edition = "2024"

[alias]
test = "test -- --no-capture"

[dependencies]
approx = "0.5.1"
# regular
bevy = { version = "0.15"}
proc-macro-lib = { path = "./proc_macro_lib" }
bytemuck = "1.20.0"
futures = "0.3.31"
pollster = "0.4.0"
sysinfo = "0.33.0"
wgpu = "23.0.1"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release.package."*"]
opt-level = 3  

[toolchain]
channel = "nightly"
