[workspace]
members = [
    "bevy_gpu_compute",
    "bevy_gpu_compute_core",
    "bevy_gpu_compute_macro",
]
resolver="3"
[workspace.package]
version = "0.1.1"
authors = ["Sheldon Frith"]
rust-version = "1.86"
description = "Empowering anyone to leverage GPU-acceleration with as little barrier-to-entry as possible"
edition = "2024"
repository = "https://github.com/Sheldonfrith/bevy_gpu_compute"
license = "MIT"
keywords = ["machine-learning", "gpu", "bevy","beginner","wgpu"]
categories = ["api-bindings", "concurrency","hardware-support","simulation","game-development"]

