[package]
name = "bevy_gpu_compute"
version.workspace = true
authors.workspace = true
rust-version.workspace =  true
description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

exclude = [
    "*.graphml",
    "*.png",
]
[dependencies]
bevy_gpu_compute_macro = { path = "../bevy_gpu_compute_macro", version = "0.1"}
bevy_gpu_compute_core = { path = "../bevy_gpu_compute_core", version = "0.1"}
bevy = "0.15"
futures = "0.3.31"
pollster = "0.4.0"
wgpu = "23.0.1"
sysinfo = "0.33.0"
bytemuck = {version = "1.21.0", features=["derive"]}

[dev-dependencies]
approx = "0.5.1"


[toolchain]
channel = "nightly"
