[package]
name = "bevy_gpu_compute_core"
version.workspace = true
authors.workspace = true
rust-version.workspace =  true
description.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
bytemuck = {version = "1.21.0", features=["derive"]}
paste = "1.0.15"
[features]
f16 = []  # Enable unstable f16 data type support (16 bit floating point numbers), which can improve gpu compute performance if used

[dev-dependencies]
pretty_assertions = "1.4.1"
