[package]
name = "rust_to_wgsl"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true
[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.92"
quote = "1.0.38"
syn = { version = "2.0.94", features = ["full","visit-mut","visit"]   }
shared = {path = "../shared"}
regex = "1.11.1"
compiletest_rs = "0.11.2"
trybuild = "1.0.101"
bytemuck = {version = "1.21.0", features=["derive"]}

[dev-dependencies]
pretty_assertions = "1.4.1"
