[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version= "1.21.0", features=["derive"]}
# spl-pod = "0.5.0"
paste = "1.0.15"
# proc-macro2 = "1.0.92"
# quote = "1.0.38"
[features]
f16 = []  # Enable unstable f16 data type support (16 bit floating point numbers), which can improve gpu compute performance if used

[dev-dependencies]
pretty_assertions = "1.4.1"
